--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,15 @@ repositories {
 	maven { url "http://oss.sonatype.org/releases"}
 }
 
+configurations {
+    javadocDeps
+    compile.exclude module: "spring-boot-starter-tomcat"
+}
+
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
 	compile("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
+    compile("org.springframework.boot:spring-boot-starter-jetty:$springBootVersion")
     compile("com.3pillarglobal.labs:spring-data-simpledb:${springDataSimpleDBVersion}")
 	compile("com.vaadin:vaadin-server:$vaadinVersion")
 	compile("com.vaadin:vaadin-client-compiled:$vaadinVersion")
@@ -56,6 +62,7 @@ dependencies {
     compile("org.yaml:snakeyaml:1.13")
     // mandatory dependencies for using Spock
     compile("org.codehaus.groovy:groovy-all:2.2.0")
+    compile("org.hibernate:hibernate-validator:4.2.0.Final")
     testCompile("org.spockframework:spock-core:0.7-groovy-2.0")
     testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 
@@ -66,10 +73,6 @@ dependencies {
 
     testCompile("junit:junit")
 }
-
-configurations {
-	javadocDeps
- }
 
  dependencies {
 	javadocDeps "javax.portlet:portlet-api:2.0"
