--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,10 @@ dependencies {
 	compile("com.amazonaws:aws-java-sdk:1.7.4")
     compile("org.yaml:snakeyaml:1.13")
     // mandatory dependencies for using Spock
-    compile("org.codehaus.groovy:groovy-all:2.2.0")
+    testCompile("org.codehaus.groovy:groovy-all:1.8.6")
+    compile("org.codehaus.groovy:groovy-all:1.8.8")
     compile("org.hibernate:hibernate-validator:4.2.0.Final")
-    testCompile("org.spockframework:spock-core:0.7-groovy-2.0")
+    testCompile("org.spockframework:spock-core:0.7-groovy-1.8")
     testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 
     // optional dependencies for using Spock
