--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ repositories {
 	maven { url "http://repo.spring.io/milestone" }  // for AspectJ 1.8.0.RC3
 	maven { url "http://maven.vaadin.com/vaadin-addons"}
 	maven { url "http://oss.sonatype.org/releases"}
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
 
 configurations {
@@ -57,8 +58,10 @@ dependencies {
 	compile("com.vaadin:vaadin-client-compiled:$vaadinVersion")
 	compile("com.vaadin:vaadin-themes:$vaadinVersion")
 	compile("ru.xpoft.vaadin:spring-vaadin-integration:2.0.2")
-	compile("org.vaadin.addons:dcharts-widget:1.7.0")
-	compile("com.amazonaws:aws-java-sdk:1.7.4")
+    compile("com.vaadin.addon:vaadin-touchkit-agpl:3.0.1")
+    compile("org.vaadin.spring:spring-boot-vaadin:0.0.2-SNAPSHOT")
+    compile("com.vaadin.addon:vaadin-charts:+")
+    compile("com.amazonaws:aws-java-sdk:1.7.4")
     compile("org.yaml:snakeyaml:1.13")
     // mandatory dependencies for using Spock
     testCompile("org.codehaus.groovy:groovy-all:2.2.2")
