Removed widetset annotation and at least navigation to the second (anotherUI) works.  Need to ask Justin Long how to get widgetsets to compile and be added to the classpath

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ server:
 management:
   port: 9001
   address: 127.0.0.1
+vaadin.servlet.urlMapping: /*
 channel.label:
   A00: Humidity
   A01: Wind Speed
