--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 out/
 bin/
 build/
-src/main/webapp/
+src/main/webapp/VAADIN/gwt-initCache/
+src/main/webapp/VAADIN/widgetsets/
 target/
 *.iml
 *.ipw
